--- a/scss/partials/_aside.scss
+++ b/scss/partials/_aside.scss
@@ -1,6 +1,7 @@
 aside {
   display : none;
   @media (min-width: 512px){
+    display: inline-block;
     width: 10vw;
     background: yellow;
   }
