partial: header and first row

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,9 @@
 // Modules
 @import "./modules/all.scss";
 @import "./modules/colors.scss";
+@import "./modules/mixins.scss";
+@import "./modules/placeholders.scss";
+
 //Partials
 @import "./partials/base.scss";
 @import "./partials/header.scss";
