--- a/scss/partials/_aside.scss
+++ b/scss/partials/_aside.scss
@@ -1,8 +1,9 @@
 aside {
   display : none;
-  @media (min-width: 512px){
+  @include tabletAndDesktop {
     display: inline-block;
-    width: 10vw;
+    width: 10%;
     background: yellow;
+    border: 1px solid orangered;
   }
 }
