--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -3,7 +3,7 @@ body {
   color: map-get($colors, font);
   font-family: 'Book Antiqua', 'Arial', sans-serif;
   position: relative;
-  @media print {
+  @include printState {
     * {
       background-color: white;
       color: black;
@@ -15,17 +15,28 @@ body {
 }
 
 .container{
-  width: 80vw;
-  margin: 1.5rem auto;
+  width: 100%;
+  margin: 1em 0;
+  border: 1px solid red;
   max-width: 1200px;
+  @include tabletAndDesktop {
+    width: 80%;
+    margin: 1em auto;
+  }
 }
+
+
+
+.main_container{
+  width: 100%;
+  display: flex;
+  position: absolute;
+  top: 9vh;
+  left: 0;
+}
+
+
 
 main.container {
   margin: 0;
-}
-
-.main_container{
-  display: flex;
-  position: absolute;
-  top: 15vh;
 }
