games and websites styling and description

--- a/scss/modules/_colors.scss
+++ b/scss/modules/_colors.scss
@@ -1,5 +1,8 @@
 $colors: (
-  background: palegreen,
+  background: #347777,
+  backgroundDesktop: palegreen,
+  backgroundTablet: #afaaff,
+  header: lightgrey,
   font: black,
   aside_background: light-yellow
 )
