--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -1,7 +1,7 @@
 header {
   position: fixed;
   z-index: 1;
-  background: lightgrey;
+  background: map-get($colors, header);
   width: 100%;
   height: 9vh;
   //border: 1px solid maroon;
@@ -11,7 +11,6 @@ header {
   display: inline-block;
   width: 20%;
   max-width: 80px;
-  //height: 50px;
   background-color: pink;
 }
 
