--- a/scss/partials/_main.scss
+++ b/scss/partials/_main.scss
@@ -11,22 +11,43 @@
         display: flex;
         flex-wrap: wrap;
         flex-direction: row;
+        justify-content: space-evenly;
       }
-
-
       .projects_item{
-        border: 1px solid orange;
+        border: 5px solid steelblue;
+        box-shadow: 0px 0px 7px maroon;
+        border-radius: 5px;
         width: 100%;
         text-align: center;
+        background-image: url("../img/tetris1.png");
+        background-blend-mode: hue;
+        background-size: contain;
         @include tabletAndDesktop {
           width: 45%;
-          margin: 2.5%;
+          margin: 2.5% 0;
+          background-image: none;
+        }
+        .projects_inner_header{
+          padding-top: 1em;
+          font-size: 1.6em;
+          @include tablet {
+            text-shadow: 0 0 3px darkviolet;
+          }
+          @include desktop {
+            //color: seagreen;
+            text-shadow: 0 0 3px darkgreen;
+            color: darkolivegreen;
+
+          }
         }
         .projects_item_photo{
           display: none;
           @include tabletAndDesktop {
             display: block;
             background-color: red;
+            border: 2px solid darkblue;
+            box-shadow: 0px 0px 4px maroon;
+            border-radius: 5px;
             width: 80%;
             height: 28vh;
             //height: 548*100%/1302;
@@ -43,22 +64,17 @@
                   } @else if $i ==4 {
                     background-image: url("../img/furry1.png");
                   }
-
+                }
               }
             }
-
-          }
         }
-
         .projects_item_description{
           padding: 10px;
         }
         .projects_button {
           display: block;
-
         }
       }
-
     }
     .projects_outer_header {
       color: navy;
