smurf header and main colors

--- a/scss/modules/_colors.scss
+++ b/scss/modules/_colors.scss
@@ -4,5 +4,5 @@ $colors: (
   backgroundTablet: #afaaff,
   header: lightgrey,
   font: black,
-  aside_background: light-yellow
+  aside_background: #ffff80
 )
