--- a/scss/partials/_aside.scss
+++ b/scss/partials/_aside.scss
@@ -3,14 +3,13 @@ aside {
   @include tabletAndDesktop {
     display: inline-block;
     width: 10%;
-    background: yellow;
+    background: map-get($colors, aside_background);
     border: 1px solid orangered;
     .aside_container_smurf{
       width: 128px;
       height: 128px;
       transform: translateY(30vh);
       background-image: url("../img/img.png");
-      /*background-position: 0 0;*/
       background-position-x: 0px;
       background-position-y: 0px;
     }
