--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -1,17 +1,21 @@
 header {
-  position: fixed;
-  z-index: 1;
+  //position: fixed;
+  //z-index: 1;
   background: map-get($colors, header);
   width: 100%;
   height: 9vh;
-  //border: 1px solid maroon;
+  border: 1px solid maroon;
 }
 
 .nav_logo {
   display: inline-block;
   width: 20%;
   max-width: 80px;
-  background-color: pink;
+  color: #330033;
+  font-size: 24px;
+  padding-left: 20px;
+  text-shadow: 0px 0px 2px #4d004d,0px 0px 4px #660066, 0 0 6px #800080, 0 0 8px #990099, 0 0 10px #b300b3, 0 0 12px #cc00cc;
+
 }
 
 .nav_hamburger {
@@ -27,9 +31,9 @@ header {
   @include tablet {
     display: inline-block;
     width: 80%;
-    &:after {
+    &:after, &:before {
       content: '';
-      display: inline-block;
+      display: block;
       clear: both;
     }
     .nav_list2_container {
@@ -64,11 +68,6 @@ header {
   }
 }
 
-.nav_list2{
-  display: none;
-  text-align: center;
-}
-
 .nav_list2_container {
   position: relative;
   &:hover {
@@ -80,19 +79,24 @@ header {
     }
   }
   .nav_list2{
+    display: none;
+    text-align: center;
     position: absolute;
     width: 10vw;
-    border: 1px solid black;
+    border: 2px solid grey;
     border-radius: 3px;
-    background: forestgreen;
+    background: map-get($colors, header);
     li{
+      padding: 5px;
       &:before {
         content: '';
         display: inline-block;
-        border: 3px solid red;
+        border: 4px solid grey;
         transform: rotate(45deg);
-        width: 3px;
-        height: 3px;
+        width: 2px;
+        height: 2px;
+        position: relative;
+        left: -5px;
       }
     }
   }
