--- a/scss/partials/_main.scss
+++ b/scss/partials/_main.scss
@@ -13,9 +13,14 @@
         flex-direction: row;
         justify-content: space-evenly;
       }
+      @include desktop {
+        //background-color: #247646;
+      }
       .projects_item{
-        border: 5px solid steelblue;
-        box-shadow: 0px 0px 7px maroon;
+        //border: 5px solid steelblue;
+        //box-shadow: 0px 0px 7px maroon;
+        border: 5px solid #346666;
+        box-shadow: 0px 0px 8px darkblue;
         border-radius: 5px;
         width: 100%;
         text-align: center;
@@ -27,6 +32,12 @@
           margin: 2.5% 0;
           background-image: none;
         }
+        @include desktop {
+          //border: 5px solid #347777;
+          border: 5px solid #247646;
+          box-shadow: 0px 0px 8px darkgreen;
+          background-color: #7acbab;
+        }
         .projects_inner_header{
           padding-top: 1em;
           font-size: 1.6em;
@@ -36,8 +47,8 @@
           @include desktop {
             //color: seagreen;
             text-shadow: 0 0 3px darkgreen;
-            color: darkolivegreen;
-
+            //color: darkolivegreen;
+            color: #014313;
           }
         }
         .projects_item_photo{
@@ -77,7 +88,9 @@
       }
     }
     .projects_outer_header {
-      color: navy;
+      //color: linear-gradient(to bottom, #33ccff 0%, #ff99cc 100%);
+      text-decoration-style: dotted;
+      text-decoration: underline;
     }
   }
 
