--- a/scss/partials/_aside.scss
+++ b/scss/partials/_aside.scss
@@ -5,13 +5,19 @@ aside {
     width: 10%;
     background: map-get($colors, aside_background);
     border: 1px solid orangered;
-    .aside_container_smurf{
+    //height: 100%;
+    .aside_smurf{
       width: 128px;
       height: 128px;
       transform: translateY(30vh);
       background-image: url("../img/img.png");
       background-position-x: 0px;
       background-position-y: 0px;
+      &.aside_rotated{
+        //transform: rotateZ(180deg);
+        transform: rotateZ(90deg);
+      }
     }
+
   }
 }
