--- a/scss/modules/_colors.scss
+++ b/scss/modules/_colors.scss
@@ -3,6 +3,7 @@ $colors: (
   backgroundDesktop: palegreen,
   backgroundTablet: #afaaff,
   header: lightgrey,
+  footer: lightgrey,
   font: black,
   aside_background: #ffff80
 )
