--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -1,14 +1,9 @@
 body {
-  background-color: map-get($colors, background);
+
   color: map-get($colors, font);
   font-family: 'Book Antiqua', 'Arial', sans-serif;
   //position: relative;
-  @include tablet {
-    background-color: map-get($colors, backgroundTablet);
-  }
-  @include desktop {
-    background-color: map-get($colors, backgroundDesktop);
-  }
+
   @include printState {
     * {
       background-color: white;
@@ -19,15 +14,23 @@ body {
     }
   }
 }
+main {
+  background-color: map-get($colors, background);
+  @include tablet {
+    background-color: map-get($colors, backgroundTablet);
+  }
+  @include desktop {
+    background-color: map-get($colors, backgroundDesktop);
+  }
+}
 
 .container{
   width: 100%;
-  margin: 1em 0;
   border: 1px solid red;
   max-width: 1200px;
   @include tabletAndDesktop {
     width: 80%;
-    margin: 1em auto;
+    margin: 0 auto;
   }
 }
 
