--- a/scss/partials/_main.scss
+++ b/scss/partials/_main.scss
@@ -17,6 +17,7 @@
         //background-color: #247646;
       }
       .projects_item{
+        transition: 0.3s;
         //border: 5px solid steelblue;
         //box-shadow: 0px 0px 7px maroon;
         border: 5px solid #346666;
