--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -1,10 +1,7 @@
 header {
-  //position: fixed;
-  //z-index: 1;
   background: map-get($colors, header);
   width: 100%;
-  height: 9vh;
-  border: 1px solid maroon;
+  padding: 0.7em 0;
 }
 
 .nav_logo {
@@ -15,97 +12,115 @@ header {
   font-size: 24px;
   padding-left: 20px;
   text-shadow: 0px 0px 2px #4d004d,0px 0px 4px #660066, 0 0 6px #800080, 0 0 8px #990099, 0 0 10px #b300b3, 0 0 12px #cc00cc;
-
-}
-
-.nav_hamburger {
-  display: inline-block;
-  @include tabletAndDesktop {
-    display: none;
-  }
 }
 
 .nav_list1{
   display: none;
-  border: 1px solid violet;
-  @include tablet {
+  &:after, &:before {
+    content: '';
     display: inline-block;
-    width: 80%;
-    &:after, &:before {
-      content: '';
-      display: block;
-      clear: both;
-    }
-    .nav_list2_container {
-      list-style: none;
-      display: inline-block;
-      float: right;
-      margin-left: 2em;
-      &:not(:first-child){
-        margin-right: 2em;
-      }
-    }
-
+    clear: both;
   }
-  @include desktop {
+  @include tabletAndDesktop {
     list-style: none;
     display: inline-block;
     width: 80%;
-    &:after {
-      content: '';
-      display: inline-block;
-      clear: both;
-    }
-
-    .nav_list2_container {
-      display: inline-block;
-      float: right;
-      margin-left: 2em;
-      &:not(:first-child){
-        margin-right: 2em;
-      }
-    }
   }
 }
 
 .nav_list2_container {
   position: relative;
+  list-style: none;
+  display: inline-block;
+  float: right;
+  margin-left: 2em;
+  &:not(:first-child){
+    margin-right: 2em;
+  }
   &:hover {
     .nav_list2 {
       display: block;
-      li {
-        display: block;
-      }
     }
   }
   .nav_list2{
     display: none;
     text-align: center;
     position: absolute;
-    width: 10vw;
-    border: 2px solid grey;
+    border: 2px solid map-get($colors, headerBorder);
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
     border-radius: 3px;
     background: map-get($colors, header);
-    li{
-      padding: 5px;
-      &:before {
-        content: '';
-        display: inline-block;
-        border: 4px solid grey;
-        transform: rotate(45deg);
-        width: 2px;
-        height: 2px;
-        position: relative;
-        left: -5px;
-      }
+    &.games {
+      left: -80%;
+      width: 200px;
+    }
+    &.web {
+      left: 10%;
+      width: 150px;
     }
   }
 }
 
+.nav_list2_item {
+  display: block;
+  padding: 5px;
+  width: 100%;
+  &:before {
+    content: '';
+    display: inline-block;
+    border: 4px solid map-get($colors, headerBorder);
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+    width: 2px;
+    height: 2px;
+    position: relative;
+    left: -5px;
+  }
+}
+
 .nav_link {
-  color: black;
+  color: map-get($colors, font);
   text-decoration: none;
   display: inline-block;
   text-align: center;
 }
 
+.nav_hamburger {
+  position: relative;
+  display: inline-block;
+  @include tabletAndDesktop {
+    display: none;
+  }
+}
+
+.nav_hamburger_sign {
+  font-size: 2em;
+  font-weight: 900;
+  padding-left: 8vw;
+  cursor: pointer;
+}
+
+.nav_hamburger_list {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 15vw;
+  border: 4px solid map-get($colors, headerBorder);
+  background-color: map-get($colors, header);
+  list-style: none;
+  width: 50vw;
+  max-width: 250px;
+  text-align: center;
+}
+
+.nav_hamburger_list_item {
+  padding: 7px;
+  .nav_hamburger_link, .nav_hamburger_link:link, .nav_hamburger_link:visited, .nav_hamburger_link:active, .nav_hamburger_link:hover {
+    color: map_get($colors, font);
+    text-decoration: none;
+  }
+}
