--- a/scss/partials/_main.scss
+++ b/scss/partials/_main.scss
@@ -1,16 +1,21 @@
 .projects{
   .projects_categories {
-    //width: 76vw;
-    //margin: 5px auto;
-
     .projects_item_container{
-      border: 3px solid darkgreen;
+      -webkit-border-radius: 5px;
+      -moz-border-radius: 5px;
       border-radius: 5px;
       width: 100%;
       @include tabletAndDesktop {
+        display: -webkit-flex;
         display: flex;
+        -webkit-flex-wrap: wrap;
+        -moz-flex-wrap: wrap;
         flex-wrap: wrap;
+        -webkit-flex-direction: row;
+        -moz-flex-direction: row;
         flex-direction: row;
+        -webkit-justify-content: space-evenly;
+        -moz-justify-content: space-evenly;
         justify-content: space-evenly;
       }
       @include desktop {
@@ -89,11 +94,20 @@
       }
     }
     .projects_outer_header {
-      //color: linear-gradient(to bottom, #33ccff 0%, #ff99cc 100%);
-      text-decoration-style: dotted;
-      text-decoration: underline;
+      font-size: 1.7em;
+      text-align: center;
+      padding: 0.2em;
+      font-style: italic;
     }
   }
 
+}
+
+
+.projects_header {
+  font-size: 2.7em;
+  text-align: center;
+  padding: 0.5em;
+  font-family: 'Courgette', cursive;
 }
 
