--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -5,11 +5,12 @@ header {
 }
 
 .nav_logo {
+  font-family: 'Courgette', cursive;
   display: inline-block;
   width: 20%;
   max-width: 80px;
   color: #330033;
-  font-size: 24px;
+  font-size: 1.7em;
   padding-left: 20px;
   text-shadow: 0px 0px 2px #4d004d,0px 0px 4px #660066, 0 0 6px #800080, 0 0 8px #990099, 0 0 10px #b300b3, 0 0 12px #cc00cc;
 }
@@ -29,6 +30,7 @@ header {
 }
 
 .nav_list2_container {
+  font-weight: 900;
   position: relative;
   list-style: none;
   display: inline-block;
