styling of buttons

--- a/scss/modules/_colors.scss
+++ b/scss/modules/_colors.scss
@@ -1,7 +1,7 @@
 $colors: (
   background: #347777,
   backgroundDesktop: palegreen,
-  backgroundTablet: #afaaff,
+  backgroundTablet: #bfbbff,
   header: lightgrey,
   headerBorder: grey,
   footer: lightgrey,
