--- a/scss/partials/_main.scss
+++ b/scss/partials/_main.scss
@@ -1,57 +1,3 @@
-.projects_item_container {
-  border-radius: 5px;
-  width: 100%;
-  @include tabletAndDesktop {
-    display: -webkit-flex;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-evenly;
-  }
-}
-
-
-
-.projects_item{
-  border: 5px solid #346666;
-  box-shadow: 0px 0px 8px darkblue;
-  border-radius: 5px;
-  width: 100%;
-  text-align: center;
-  background-color: #14222f;
-  color: #c6e6e6;
-  @include tabletAndDesktop {
-    width: 45%;
-    margin: 2.5% 0;
-    color: black;
-  }
-  @include tablet {
-    background-color: #bfbbff;
-  }
-  @include desktop {
-    background-color: #7acbab;
-    border: 5px solid #247646;
-    box-shadow: 0px 0px 8px darkgreen;
-    transition: 0.3s;
-    &:hover {
-      transform: scale(1.02);
-    }
-  }
-}
-
-
-.projects_inner_header{
-  padding-top: 1em;
-  font-size: 1.6em;
-  @include tablet {
-    text-shadow: 0 0 3px darkviolet;
-  }
-  @include desktop {
-    text-shadow: 0 0 3px darkgreen;
-    color: #014313;
-  }
-}
-
 .projects_header {
   font-size: 2.7em;
   text-align: center;
@@ -66,20 +12,94 @@
   font-style: italic;
 }
 
-.projects_item_description{
-  padding: 10px;
+.projects_item_container {
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  width: 100%;
+  @include tabletAndDesktop {
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+    -moz-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-flex-direction: row;
+    -moz-flex-direction: row;
+    flex-direction: row;
+    -webkit-justify-content: space-around;
+    -moz-justify-content: space-evenly;
+    justify-content: space-evenly;
+  }
+}
+
+.projects_item{
+  border: 5px solid #346666;
+  -webkit-box-shadow: 0px 0px 8px darkblue;
+  -moz-box-shadow: 0px 0px 8px darkblue;
+  box-shadow: 0px 0px 8px darkblue;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  width: 100%;
+  text-align: center;
+  background-color: #14222f;
+  color: #c6e6e6;
+  @include tabletAndDesktop {
+    width: 45%;
+    margin: 2.5% 0;
+    color: map-get($colors, font);
+  }
+  @include tablet {
+    background-color: #bfbbff;
+  }
+  @include desktop {
+    background-color: #7acbab;
+    border: 5px solid #247646;
+    -webkit-box-shadow: 0px 0px 8px darkgreen;
+    -moz-box-shadow: 0px 0px 8px darkgreen;
+    box-shadow: 0px 0px 8px darkgreen;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+    &:hover {
+      -webkit-transform: scale(1.02);
+      -moz-transform: scale(1.02);
+      -ms-transform: scale(1.02);
+      -o-transform: scale(1.02);
+      transform: scale(1.02);
+    }
+  }
+}
+
+.projects_inner_header{
+  padding-top: 1em;
+  font-size: 1.6em;
+  @include tablet {
+    text-shadow: 0 0 3px darkviolet;
+  }
+  @include desktop {
+    text-shadow: 0 0 3px darkgreen;
+    color: #014313;
+  }
 }
 
 .projects_item_photo{
   display: none;
   @include tabletAndDesktop {
     display: block;
-    background-color: lightgrey;
-    border: 2px solid darkblue;
-    box-shadow: 0px 0px 4px maroon;
-    border-radius: 5px;
     width: 80%;
     height: 28vh;
+    border: 2px solid darkblue;
+    -webkit-box-shadow: 0px 0px 4px maroon;
+    -moz-box-shadow: 0px 0px 4px maroon;
+    box-shadow: 0px 0px 4px maroon;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    background-color: lightgrey;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
     background-position: center;
     margin: 1em 10%;
@@ -97,6 +117,10 @@
       }
     }
   }
+}
+
+.projects_item_description{
+  padding: 10px;
 }
 
 .projects_button {
