--- a/scss/partials/_main.scss
+++ b/scss/partials/_main.scss
@@ -41,22 +41,22 @@
   -moz-border-radius: 5px;
   width: 100%;
   text-align: center;
-  background-color: #14222f;
-  color: #c6e6e6;
+  background-color: map-get($colorsSmall, projectsItemBackground);
+  color: map-get($colorsSmall, projectsItemColor);
   @include tabletAndDesktop {
     width: 45%;
     margin: 2.5% 0;
     color: map-get($colors, font);
   }
   @include tablet {
-    background-color: #bfbbff;
+    background-color: map-get($colorsTablet, projectsItemBackground);
   }
   @include desktop {
-    background-color: #7acbab;
-    border: 5px solid #247646;
-    -webkit-box-shadow: 0px 0px 8px darkgreen;
-    -moz-box-shadow: 0px 0px 8px darkgreen;
-    box-shadow: 0px 0px 8px darkgreen;
+    background-color: map-get($colorsDesktop, projectsItemBackground);
+    border: 5px solid map-get($colorsDesktop, projectsItemBorder);
+    -webkit-box-shadow: 0 0 8px map-get($colorsDesktop, projectsItemBoxShadow);
+    -moz-box-shadow: 0 0 8px map-get($colorsDesktop, projectsItemBoxShadow);
+    box-shadow: 0 0 8px map-get($colorsDesktop, projectsItemBoxShadow);
     -webkit-transition: 0.3s;
     -moz-transition: 0.3s;
     -o-transition: 0.3s;
@@ -75,11 +75,11 @@
   padding-top: 1em;
   font-size: 1.6em;
   @include tablet {
-    text-shadow: 0 0 3px darkviolet;
+    text-shadow: 0 0 3px map-get($colorsTablet, innerHeaderTextShadow);
   }
   @include desktop {
-    text-shadow: 0 0 3px darkgreen;
-    color: #014313;
+    text-shadow: 0 0 3px map-get($colorsDesktop, innerHeaderTextShadow);
+    color: map-get($colorsDesktop, innerHeaderText);
   }
 }
 
@@ -89,10 +89,10 @@
     display: block;
     width: 80%;
     height: 28vh;
-    border: 2px solid darkblue;
-    -webkit-box-shadow: 0px 0px 4px maroon;
-    -moz-box-shadow: 0px 0px 4px maroon;
-    box-shadow: 0px 0px 4px maroon;
+    border: 2px solid map-get($colors, photoBorder);
+    -webkit-box-shadow: 0 0 4px map-get($colors, photoShadow);
+    -moz-box-shadow: 0 0 4px map-get($colors, photoShadow);
+    box-shadow: 0 0 4px map-get($colors, photoShadow);
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
@@ -127,8 +127,8 @@
   text-align: center;
   margin-bottom: 1em;
   padding: 5px 10px;
-  background-color: #c6e6e6;
-  border: 2px solid #0d160e;
+  background-color: map-get($colorsSmall, buttonBackground);
+  border: 2px solid map-get($colorsSmall, buttonBorder);
   a {
     font-weight: 800;
     text-decoration: none;
