--- a/scss/partials/_main.scss
+++ b/scss/partials/_main.scss
@@ -86,6 +86,7 @@
 .projects_item_photo{
   display: none;
   @include tabletAndDesktop {
+    cursor: pointer;
     display: block;
     width: 80%;
     height: 28vh;
