change of nav sign

--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -105,6 +105,8 @@ header {
   font-weight: 900;
   padding-left: 8vw;
   cursor: pointer;
+  width: 50px;
+  border: 3px solid red;
 }
 
 .nav_hamburger_list {
