--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -105,7 +105,7 @@ header {
   font-weight: 900;
   padding-left: 8vw;
   cursor: pointer;
-  width: 50px;
+  width: 40vw;
   border: 3px solid red;
 }
 
