--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -105,7 +105,7 @@ header {
   font-weight: 900;
   cursor: pointer;
   width: 40vw;
-  border: 3px solid red;
+  border: 3px solid blue;
 }
 
 .nav_hamburger_list {
