--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -106,7 +106,8 @@ header {
   cursor: pointer;
   width: 40vw;
   &:before {
-    content:'\2630';
+    //content:'\2630';
+    content:'';
     display: inline-block;
   }
 }
